// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render expense list 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-mobile"
    >
      Expenses
    </div>
    <div
      className="show-desktop"
    >
      Expense
    </div>
    <div
      className="show-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={300}
      createdAt={0}
      description="Buddy"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={600}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={2000}
      createdAt={345600000}
      description="Credits"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`render no expense list 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-mobile"
    >
      Expenses
    </div>
    <div
      className="show-desktop"
    >
      Expense
    </div>
    <div
      className="show-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item_message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;
